Makale gönderimi için gerekenler eklendi.