@@ -3,6 +3,7 @@ package org.cms.com.security;
 import lombok.RequiredArgsConstructor;
 import org.cms.com.domain.Participant;
 import org.cms.com.repositories.ParticipantRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -10,6 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service("participantDetailsService")
 @RequiredArgsConstructor
@@ -21,7 +23,6 @@ public class ParticipantDetailsService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         Participant participant = participantRepository.findByEmail(username)
                 .orElseThrow(() -> new UsernameNotFoundException("Participant not found: " + username));
-        return new User(participant.getEmail(), participant.getPassword(), Collections.emptyList());
+        return new User(participant.getEmail(), participant.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_PARTICIPANT")));
     }
 }
-
